vclusters/private/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
spec:
  ingressClassName: nginx # use your ingress class name
  rules:
  - host: keycloak.ichigo.dev
    http:
      paths:
      - backend:
          service:
            name: keycloak-http
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
